# Coleccion_de_Ejercicios_Excepciones_Gabriel_Kaakedjian

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: banderas.cpp  banderas.h
Ejercicio2/: excepciones.cpp  excepciones.h
Ejercicio3/: excepcionfunciones.cpp  excepcionfunciones.h
Ejercicio4/: clasesexcepcion.cpp  clasesexcepcion.h
Ejercicio5/: excepcionreactivacion.cpp  excepcionreactivacion.h
Ejercicio6/: excepcionesnointerceptadas.cpp  excepcionesnointerceptadas.h
Ejercicio7/: adquisicionrecursos.cpp  adquisicionrecursos.h
